[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0.1"
async-graphql-axum = "7.0.1"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.35.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
anyhow = "1.0.79"
rand = "0.8.4"
